--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,3 +14,8 @@ body {
   color: #fff;
   background-color: #000;
 }
+.login-button{
+  display: flex;
+  align-items: center;
+  margin: 10px auto;
+}
