--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -1,20 +1,25 @@
 <%- include('partials/header') %>
 
-<div class="jumbotron text-center">
-  <div class="container">
-    <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">You've Discovered My Secret!</h1>
+  <div class="jumbotron text-center">
+    <div class="container">
+      <i class="fas fa-key fa-6x"></i>
+      <h1 class="display-3">You've Discovered My Secret!</h1>
+      <%usersWithSecrets.forEach((user)=>{%>
 
-   <% usersWithSecrets.forEach(function(user){ %>
-      <p class="secret-text"><%=user.secret%></p>
-   <% }) %>
+        <% for(i=0;i< user.secret.length ;i++){%>
+          <p class="secret-text">
+            <%=user.secret[i].content%>
+          </p>
+          <%}%>
 
-    
-    <hr>
-    
-    <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
-    <a class="btn btn-dark btn-lg" href="/submit" role="button">Submit a Secret</a>
+            <%});%>
+              <hr>
+
+              <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
+              <a class="btn btn-dark btn-lg" href="/submit" role="button">Submit a Secret</a>
+              <a class="btn btn-warning btn-lg" href="/secrets/<%=userId%>" role="button">View Your Secret</a>
+
+    </div>
   </div>
-</div>
 
-<%- include('partials/footer') %>
+  <%- include('partials/footer') %>
